@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0

skinparam DefaultFontName "Helvetica"
skinparam DefaultFontSize 12
skinparam class {
    BackgroundColor White
    BorderColor #333333
    ArrowColor #555555
}
skinparam nodesep 100
skinparam ranksep 100

skinparam ArrowThickness 1.2
skinparam ArrowFontStyle bold
skinparam ArrowFontSize 11
skinparam ArrowColor #444444


package "domain.model.venue" {
    class Venue <<Entity - Immutable>> {
        - id: Long
        - name: String
        - address: Address
        - description: String
        --
        + Venue(id: Long, name: String, address: Address, ...)
    }

    class Address <<ValueObject - Immutable>> {
        - street: String
        - streetNumber: String
        - city: String
        - postalCode: String
        - country: String
        - additionalInfo: String
        --
        + Address(street: String, city: String, ...)
    }
}

package "domain.model.resource" {
    abstract class Resource <<Abstract - Immutable>> {
        - id: Long
        - venueId: Long [0..1]
        - name: String
        - description: String
        --
        # Resource(id: Long, name: String, ...)
    }

    class Space

    class Equipment {
        - totalQuantity: int
    }

    class Service
}

Venue "1 " *-- "1 " Address : " posizionata a"
Venue "1" o-right- "0..*" Space : "dispone di"
Venue "0..1" o-right- "0..*" Equipment : "dispone di"
Resource <|-- Space
Resource <|-- Equipment
Resource <|-- Service
@endum
